Refactoriza autenticación
